[EDP-DDM-9497] increased version of ddm-bpm-client, added ddm-bpm-data-accessor dep
Change-Id: If22c3673300617d53e6a1638c6dfb711e280070b